# microservices_with_django

./: .gitignore  LICENSE  README.rst
analytics/: docker-compose.yaml
analytics/core/: settings.py
auth/: consumer.py  docker-compose.yaml  package.json  requirements.txt
auth/core/: routing.py  settings.py  urls.py
blog/: docker-compose.yaml  requirements.txt
blog/core/: settings.py  urls.py
cart/: consumer.py  docker-compose.yaml
cart/core/: settings.py  urls.py
common/: requirements.txt
common/api_response_package/: LICENSE  LONG_DESCRIPTION.rst  MANIFEST.in  README.rst  setup.cfg  setup.py
common/api_response_package/rest_framework_api/: apps.py  serializers.py  views.py
common/core/: settings.py  urls.py
courses/: docker-compose.yaml
courses/core/: settings.py  urls.py
email/: consumer.py  docker-compose.yaml  requirements.txt
email/core/: asgi.py  settings.py
instructors/: consumer.py  docker-compose.yaml
instructors/core/: settings.py
messages/: docker-compose.yaml
messages/core/: settings.py  urls.py
notifications/: docker-compose.yaml
notifications/core/: settings.py  urls.py
orders/: docker-compose.yaml  requirements.txt
orders/core/: settings.py  urls.py
payments/: docker-compose.yaml
payments/core/: settings.py  urls.py
products/: docker-compose.yaml  requirements.txt
products/core/: settings.py  urls.py
progress/: docker-compose.yaml  requirements.txt
progress/core/: settings.py
search/: docker-compose.yaml
sellers/: docker-compose.yaml
wishlist/: consumer.py  docker-compose.yaml
(+106 files in other folders)
