[metadata]
name = djangorestframework_api_response
version = 0.0.27
author = Boomslag
author_email = mail@boomslag.com
maintainer_email = support@boomslag.com
description = Standard APIReponse for Django Rest Framework
# long_description = This Api Response contains the views that standardize the Response of our requests, so any programming language may understand it.
url = https://boomslag.com
license = MIT
keywords = djangorestframework common api response boomslag
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: